[tool.poetry]
name = "cnn-image-classification"
version = "0.1.0"
description = "cnn examples for image classification"
authors = ["Dimitar Gueorguiev <dimitar_pg13@hotmail.com>"]
license = "MIT license"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
