[tool.poetry]
name = "cnn-image-classification"
version = "0.1.0"
description = "cnn examples for image classification"
authors = ["Dimitar Gueorguiev"]
license = "MIT license"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
keras = "^3.3.3"
jupyter = "^1.0.0"
scikit-learn = "^1.5.0"
tensorflow = "^2.16.1"
matplotlib = "^3.9.0"
keras-tuner = "^1.4.7"
sequential = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
